Fixed horizontal scrollbar bug

--- a/Less/about.less
+++ b/Less/about.less
@@ -1,6 +1,5 @@
 
 #c2 header {
-    
     margin-bottom: 5rem;
 }
 
@@ -24,6 +23,7 @@
         height: auto;
         display: flex;
         flex-wrap: wrap;
+        color: @green;
         
         
          @media @mobile {
