--- a/Less/bottom.less
+++ b/Less/bottom.less
@@ -16,13 +16,18 @@
         justify-content: center;
         align-item: center;
         background: @epic-teal;
-        padding: 2rem;
-        margin: 2rem;
+        padding: 1.25%;
+        margin: 1.25%;
         border-radius: 2rem;
         color: @eggshell-white;
         
         @media @mobile {
+            padding: 2rem;
+            margin: 2rem;
+            border-radius: 2rem;
+
         }
+        
         
         }
     }
