--- a/Less/cta.less
+++ b/Less/cta.less
@@ -20,6 +20,7 @@
         img {
             
             width: 100%;
+            height: auto;
             max-width: 50rem;
             height: auto;
             padding: 3rem;
