--- a/Less/global.less
+++ b/Less/global.less
@@ -17,6 +17,7 @@ h1, h2, h3, h4, h5 {
 
 h1 {
   font-size: 4.1rem;
+    color: @epic-teal;
 }
 
 
